# suprakit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
context/: README.md  TODO-anionfit-esp-implementation.md  tblite-api-discovery.txt
docs/: contributing.md  index.md  installation.md  performance.md  roadmap.md
docs/adr/: 0001-tech-stack.md  0002-ir-design.md  0003-mixed-oracle.md  README.md
docs/modules/: anionfit.md
native/: README.md
notebooks/: 01_anionfit_reproducing_jacs_au_2025.ipynb  README.md
src/suprakit/: __init__.py  cli.py  exceptions.py  protocols.py
src/suprakit/anionfit/: __init__.py  esp.py  predict.py  receptors.py  substituents.py
src/suprakit/anionfit/data/: priyadarshini_2025.csv
src/suprakit/core/: __init__.py  device.py  geom.py  io.py  parallel.py  types.py  xtb.py
src/suprakit/ir/: __init__.py  base.py  complex.py  molecule.py  qcjob.py  reaction.py  serialization.py  spec.py
tests/: conftest.py  test_anionfit_esp.py  test_anionfit_predict.py  test_cli.py  test_core_device.py  test_core_io.py  test_core_xtb.py  test_protocols.py  test_receptors.py  test_smoke.py  test_substituents.py
tests/data/ir/: crown_ether_complex.yaml  ethanol.yaml  michaelis_menten.yaml  xtb_optimization.yaml
tests/ir/: test_complex.py  test_molecule.py  test_qcjob.py  test_reaction.py  test_serialization.py  test_spec.py
