[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "suprakit"
version = "0.1.0"
description = "Open-source toolkit for computational supramolecular chemistry — cages, capsules, and macrocyclic hosts."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.14"
authors = [{ name = "suprakit contributors" }]
keywords = ["chemistry", "supramolecular", "computational chemistry", "xtb", "rdkit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.1",
  "matplotlib>=3.8",
  "typer>=0.12",
  "pyyaml>=6.0",
  "joblib>=1.4",
  "platformdirs>=4.2",
]

[project.optional-dependencies]
chem = ["rdkit>=2024.3", "ase>=3.23"]
xtb = ["tblite>=0.4"]
dft = ["pyscf>=2.6"]
construct = ["stk>=2024.7"]

cpu = ["torch>=2.4"]
mps = ["torch>=2.4"]
cuda = ["torch>=2.4"]

mlip = ["mace-torch>=0.3.10"]

jax-cpu = ["jax>=0.4.30", "jaxlib>=0.4.30"]
jax-cuda = ["jax[cuda12]>=0.4.30"]

all-cpu = ["suprakit[chem,xtb,dft,construct,cpu,mlip,jax-cpu]"]
all-mps = ["suprakit[chem,xtb,dft,construct,mps,mlip]"]
all-cuda = ["suprakit[chem,xtb,dft,construct,cuda,mlip,jax-cuda]"]

[project.scripts]
suprakit = "suprakit.cli:app"

[project.urls]
Homepage = "https://github.com/suprakit/suprakit"
Repository = "https://github.com/suprakit/suprakit"
Documentation = "https://suprakit.github.io/suprakit"

[dependency-groups]
dev = [
  "ruff>=0.8",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "pytest-benchmark>=5.0",
  "pre-commit>=4.0",
  "commitizen>=3.31",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.26",
  "ipykernel>=6.29",
  "jupyterlab>=4.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/suprakit"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["notebooks"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "N",
  "UP",
  "B",
  "C4",
  "SIM",
  "PL",
]
ignore = ["D"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "PLC0415"]
"src/suprakit/core/device.py" = ["PLC0415", "PLW0603", "SIM108", "E501"]
"src/suprakit/core/xtb.py" = ["PLC0415"]
"src/suprakit/core/parallel.py" = ["PLR0913"]
"src/suprakit/anionfit/receptors.py" = ["PLR2004", "E501"]
"src/suprakit/anionfit/predict.py" = ["PLR2004", "E501"]
"src/suprakit/anionfit/esp.py" = ["E501"]
"src/suprakit/cli.py" = ["E501", "PLR2004"]
"src/suprakit/core/geom.py" = ["E501"]
"src/suprakit/anionfit/substituents.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
packages = ["suprakit"]
warn_unused_configs = true
show_error_codes = true
[[tool.mypy.overrides]]
module = ["rdkit.*", "ase.*", "tblite.*", "torch.*", "torch"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "suprakit.core.*"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=suprakit --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["suprakit"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
